--- a/Memory game/style.css
+++ b/Memory game/style.css
@@ -33,6 +33,8 @@ body {
 	height: 16vh;
 	border: 0;
 	border-radius: 15%;
+}
+.unsolved{
 	background-color: #0e153a;
 }
 @media (max-aspect-ratio: 1/1) {
@@ -41,3 +43,10 @@ body {
     height:20vw;
   }
 }
+/*
+blue palette:
+#e2f3f5
+#22d1ee
+#3d5af1
+#0e153a
+*/
