--- a/Memory game/style.css
+++ b/Memory game/style.css
@@ -34,15 +34,59 @@ body {
 	border: 0;
 	border-radius: 15%;
 }
-.unsolved{
-	background-color: #0e153a;
-}
+
+
 @media (max-aspect-ratio: 1/1) {
   .card {
     width:20vw ;
     height:20vw;
   }
 }
+
+
+.unsolved{
+	background-color: #0e153a !important;
+	animation-name: spin;
+    animation-duration: 1000ms;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+}
+
+@keyframes spin {
+    from {transform:rotateY(0deg);}
+    to {transform:rotateY(360deg);}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*
 blue palette:
 #e2f3f5
