--- a/Memory game/style.css
+++ b/Memory game/style.css
@@ -48,15 +48,18 @@ body {
 
 .consoleButtons {
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
 }
 
 .consoleButtons >* {
-	margin: 10px;
+	margin: 20px 0px;
 }
 
 .hidden {
 	display: none !important;
+}
+p {
+	font-size: 1.5em;
 }
 
 @keyframes spin {
@@ -75,9 +78,16 @@ body {
 		width: 20vw;
 		height: 20vw;
 	}
-
 }
+@media (min-width: 900px){
+	p{
+		font-size: 3em;
 
+	}
+	.consoleButtons{
+		padding: 20px 0px;
+	}
+}
 /*
 blue palette:
 #e2f3f5
