--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -46,13 +46,19 @@ body {
 		width: 80vw;
 		height: 80vw;
 	}
+.card {
+	width: 100%;
+	height: 100%;
+	border-top: 5px #83e85a solid;
+	border-right: 5px #83e85a solid;
+}
 
 }
 
 /*
-orange palette:
-#5d5d5a
-#ffa45c
-#ffcdab
-#fff4e3
+palette:
+#107a8b
+#2cb978
+#83e85a
+#3b5441
 */
