--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -13,7 +13,7 @@ body {
 	width: 100%;
 	display: grid;
 	place-items: center;
-	background-color:#107a8b;
+	background-color: #107a8b;
 }
 
 .main_board {
@@ -24,6 +24,7 @@ body {
 	grid-template-columns: repeat(3, 1fr);
 	background-color: #2cb978;
 	border-radius: 5%;
+	display: none;
 }
 
 .card {
@@ -41,23 +42,52 @@ body {
 	border-top: 0;
 }
 
+.winning_message {
+	color: #83e85a;
+	font-size: 4em;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%)
+}
+
+.playMode{
+	display: flex;
+}
+.option {
+	width: 300px;
+	height: 72px;
+	font-size: 40px;
+	margin-right: 1em;
+	border: 0;
+	background-color:#2cb978 ;
+	color: #107a8b;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.first_question{
+	color: #83e85a;
+	text-align: center;
+	font-size: 40px;
+	margin-bottom: 30px;
+
+}
 @media (max-aspect-ratio:1/1) {
 	.main_board {
 		width: 80vw;
 		height: 80vw;
 	}
-.card {
-	width: 100%;
-	height: 100%;
-	border-top: 5px #83e85a solid;
-	border-right: 5px #83e85a solid;
-}
+
+	.card {
+		width: 100%;
+		height: 100%;
+		border-top: 5px #83e85a solid;
+		border-right: 5px #83e85a solid;
+	}
 
 }
-.winning_message{
-	color: #83e85a;
-	font-size: 4em;
-}
+
 /*
 palette:
 #107a8b
