--- a/calculator/style.css
+++ b/calculator/style.css
@@ -28,13 +28,30 @@ body {
 	height: 60%;
 	border-bottom: 1px solid black;
 	display: flex;
-	flex-direction: column-reverse;
+	flex-direction: column;
+	justify-content: flex-end;
 }
 
-.calculusHistory > input {
+.inputBody {
+	display: flex;
 	width: 100%;
+	border-top: 1px solid black;
+}
+
+.inputBody > input {
+	width: calc(70% - 10px);
+	padding: 5px;
 	border: 0;
-	margin-top: 1px
+	font-size: 20px;
+	background-color: #f0f0f0
+}
+
+.result {
+	text-align: right;
+	width: calc(30% - 10px);
+	padding: 5px;
+	font-size: 20px;
+	background-color: #f0f0f0
 }
 
 .calculusButtons {
