--- a/calculator/style.css
+++ b/calculator/style.css
@@ -13,20 +13,20 @@ body {
 	width: 100%;
 	display: grid;
 	place-items: center;
-	background-color: #46c3db
+	background-color: #a1eafb
 }
 
 .calculatorBody {
-	background-color: #2d6cdf;
+	background-color: #fff4e3;
 	width: 40vw;
 	height: 70vh;
-	border: 1px solid black;
+	border: 1px solid #cabbe9;
 }
 
 .calculusHistory {
 	width: 100%;
 	height: 60%;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #cabbe9;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
@@ -36,7 +36,7 @@ body {
 .inputBody {
 	display: flex;
 	width: 100%;
-	border-top: 1px solid black;
+	border-top: 1px solid #cabbe9;
 }
 
 .inputBody > input {
@@ -44,7 +44,11 @@ body {
 	padding: 5px;
 	border: 0;
 	font-size: 20px;
-	background-color: #f0f0f0
+	background-color: #ffcdab;
+}
+
+.inputBody > input:focus {
+	outline: none;
 }
 
 .result {
@@ -52,14 +56,80 @@ body {
 	width: calc(30% - 10px);
 	padding: 5px;
 	font-size: 20px;
-	background-color: #f0f0f0
+	background-color: #ffcdab;
 }
 
 .calculusButtons {
 	width: 100%;
 	height: 40%;
+	padding: 5px 0px;
+	display: flex;
+	flex-direction: column;
+	user-select: none;
 }
 
-.fa-exclamation-triangle{
+.fa-exclamation-triangle {
 	color: #3d5af1;
 }
+
+.categories_row {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+}
+
+.categories {
+	display: flex;
+	justify-content: space-around;
+}
+
+.main_option{
+	display: grid;
+	grid-template-columns: repeat(3,1fr); 
+	height: calc(100% - 25px);
+	padding: 5px;
+	gap: 0px 15px;
+}
+.main_functions {
+	display: grid;
+	
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(4,1fr);
+}
+.main_option div {
+	text-align: center;
+}
+.numbers{
+	display: grid;
+	grid-template-columns: repeat(4,1fr);
+	grid-template-rows: repeat(4,1fr);
+}
+
+
+.others{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+}
+
+
+.duo{
+	display: flex;
+	justify-content: space-around;
+
+}
+
+.duo >div{
+	text-align: center;
+	width: 50%;
+}
+.others> div{
+	width: 100%;
+
+}
+
+
+
+
+
+
