--- a/calculator/style.css
+++ b/calculator/style.css
@@ -18,7 +18,7 @@ body {
 
 .calculatorBody {
 	background-color: #fff4e3;
-	width: 40vw;
+	width: 60vw;
 	height: 70vh;
 	border: 1px solid #cabbe9;
 }
@@ -128,8 +128,46 @@ body {
 
 }
 
+.abc{
+	display: none;
+	height: 100%;
+	justify-content: space-around;
+	align-items: stretch ;
+	flex-wrap: wrap;
+}
+.abc >div{
+	width: 10%;
+	text-align: center;
+	margin-top: 5px;
+}
+.functions{
+	display: none;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
 
-
-
-
+@media (max-aspect-ratio:1/2) {
+	.calculatorBody{
+		width: 100%;
+		position: absolute;
+		bottom: 0px;
+		font-size: 35px;
+	}
+	.calculusButtons{
+		height: 38%;
+	}
+	.inputBody >input{
+	font-size: 35px;
+	}
+	.result{
+		font-size: 35px;
+	}
+	.inputBody{
+			border-top: 5px solid #cabbe9;
+	}
+	.calculusHistory{
+		border-bottom: 5px solid #cabbe9;
+	}
+}
 
