--- a/maze/style.css
+++ b/maze/style.css
@@ -1,7 +1,51 @@
-html, body {
-  margin: 0;
-  padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,500&display=swap');
+
+
+html,
+body {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* background-color: #fff4e3; */
+	background: linear-gradient(45deg,#00dbde,#fc00ff);
 }
+
 canvas {
-  display: block;
+	display: block;
+}
+
+.settings {
+	display: flex;
+	flex-direction: column;
+	color: #333333;
+	background-color: #ffffff;
+	padding: 42px 55px 20px;
+	border-radius: 10px;
+	font-size: 18px;
+	font-family: 'Poppins', sans-serif;
+
+}
+.settings > input,button{
+	text-align: center;
+	height: 36px;
+	border: 0;
+	border-radius: 10px;
+	margin-top: 20px;
+}
+.settings input:enabled{
+	outline: 0;
+}
+
+.settings > input{
+		border-radius: 0px;
+	border-bottom:  solid 2px;
+}
+.settings > button{
+}
+.maze{
+	display: none;
 }
