--- a/personal-blog/src/components/NavBar.css
+++ b/personal-blog/src/components/NavBar.css
@@ -8,6 +8,8 @@
     justify-content: space-between;
     position:sticky;
     top:0;
+    z-index:1;
+
 }
 
 a {
@@ -34,4 +36,9 @@ a {
   font-weight: 700;
   padding:5px 15px;
   border-radius:25px;
+}
+
+.menu{
+  width: 45px;
+  display:none;
 }
