--- a/personal-blog/src/components/Projects/RandomCasualtiess.css
+++ b/personal-blog/src/components/Projects/RandomCasualtiess.css
@@ -1,8 +1,10 @@
+html {
+  scroll-behavior: smooth;
+}
 .containerRandomCas{
     display:grid;
     grid-template-columns: 1fr 1fr;
     height:100%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .ShowCaseInfoRC{
     height: calc(100vh - 4.5rem - 20px);
@@ -28,11 +30,6 @@
 
 .RCPosterImg{
     width:100%;
-    height:100%;
-}
-
-.ProjectsSliderRC{
-    width:100px;
     height:100%;
 }
 
@@ -71,4 +68,23 @@
   
   .SwiperRC{
     height: calc(100vh - 4.5rem - 20px);
+    z-index:0;
   }
+
+.GoNextProject{
+  position:fixed;
+  bottom:1rem;
+  left:calc(100vw / 2);
+  transform: translateX(-50%);
+  background-color:#3d5af1;
+  color:#e2f3f5;  
+  border:0px;
+  border-radius:2500px;
+  width:7rem;
+  height:7rem;
+  z-index:1;
+}
+.GoNextProject h3{
+  font-weight:500;
+
+}
