--- a/ChangeBases/css/style.css
+++ b/ChangeBases/css/style.css
@@ -43,3 +43,10 @@ body {
 	background-color: rgb(24, 26, 27);
 	border-color: rgb(60, 65, 68);
 }
+
+
+.form-control:focus {
+  color: rgb(209, 205, 199);
+  background-color: rgb(24, 26, 27);
+border-color: rgb(60, 65, 68);
+}
